Creates assets/屏幕快照 2016-08-23 下午1.58.16.png
Auto commit by GitBook Editor

--- a/431-节点树.md
+++ b/431-节点树.md
@@ -1,11 +1,84 @@
 ### 什么是节点树
 
- 1. HTML DOM将HTML文档视作树结构
-
- 2. 文档中的元素、属性、文本、注释等都被看做一个节点
-
- 3. 这种结构被称为节点树
+ 1. HTML DOM将HTML文档视作树结构，文档中的元素、属性、文本、注释等都被看做一个节点，这种结构被称为节点树
 
  ![树结构模型](/assets/屏幕快照 2016-08-23 上午8.20.06.png)
 
-  
+ 2. 树根为document对象
+
+ 3. 通过document对象，来操作整个节点树
+
+ 4. HTML文档中的每个元素、属性、文本等都代表着树种的一个节点
+
+   - 整个文档是一个文档节点(document node)
+
+   - 每个HTML标签是一个元素节点(element node)
+
+   - 包含在HTML元素中的文本是文本节点（text node）
+ 
+   - 每一个HTML属性是一个属性节点（attribute node）
+
+   - 注释属于注释节点（comment node）
+
+> HTML文档内的所有内容都被视为文档树中的一个节点
+
+### document对象
+
+ 1. 浏览器内置的JS解释器会为每个HTM文档创建一个对应的document对象
+
+ 2. 通过使用document对象，可以从脚本中对HTML页面中的所有元素进行访问
+
+### 节点对象类型与继承关系
+   
+  1. DOM1级定义了Node类型，Node类型是所有节点类型的父类型，所以，Node类型提用了所有节点对象共有的基本属性和方法
+
+  ![](/assets/屏幕快照 2016-08-23 上午8.32.25.png)
+
+  2. 除此之外，还提供了节点关系的属性以及增加、删除节点的方法。
+
+  3. Node类型提供的公共属性和方法，多属于核心DOM的范围。
+
+  4. DOM树中每种节点都对应一种节点类型
+
+   ![](/assets/屏幕快照 2016-08-23 上午8.36.27.png)
+
+
+
+### 节点类型
+
+  **nodeType:** 节点类型，Number类型属性
+
+  ![](/assets/屏幕快照 2016-08-23 上午8.40.05.png)
+
+### 节点名称
+
+
+
+ **nodeName:**节点名称，String类型属性，nodeName是只读的
+
+
+
+ ![](/assets/屏幕快照 2016-08-23 上午8.38.02.png)
+
+### 节点值
+
+  **nodeValue:**节点的值，String类型属性
+
+![](/assets/屏幕快照 2016-08-23 上午8.41.18.png)
+
+### 节点间的关系
+
+  1. Node类型中定义了节点树种所有节点彼此间的关系属性
+
+   - 父节点(parent node)
+   - 子节点(child node)
+   - 兄弟节点(sibling)
+
+  ![](/assets/屏幕快照 2016-08-23 上午8.44.36.png)
+
+  2. 节点树种的节点彼此又有层级关系，Node类型使用如下属性关联节点树上的每个节点对象
+
+  ![](/assets/屏幕快照 2016-08-23 下午1.58.16.png)
+
+  3. 每个节点对象都可使用如下方法访问平行的兄弟节点
+
