--- a/412-dom概述.md
+++ b/412-dom概述.md
@@ -1,100 +1,50 @@
 ### DOM概述
 
-
-
 1. DOM是W3C\(万维网联盟\)的标准，是中立于平台和语言的接口，它允许程序和脚本动态地访问和更新文档的内容、结构、样式。
-
-
 
 2. W3C DOM标准被分为3个不同的部分
 
+  * **核心DOM**，针对任何结构化文档的标准模型
 
+  * **XMLDOM**，针对XML文档的标准模型
 
- * **核心DOM**，针对任何结构化文档的标准模型
-
-
-
- * **XMLDOM**，针对XML文档的标准模型
-
-
-
- * **HTMLDOM**，针对HTML文档的标准模型
-
-
-
-
-
-
+  * **HTMLDOM**，针对HTML文档的标准模型
 
 ### HTML DOM
 
-
-
 1. 针对HTML文档的对象模型
 
-
-
- * 当网页被加载时，浏览器会创建页面的文档对象模型
-
-
+  **当网页被加载时，浏览器会创建页面的文档对象模型**
 
 2. 通过DOM，可以访问所有的HTML元素，连同他们所包含的文本和属性
 
-
-
- * 可以对其中的内容记性修改和删除，同时也可以创建新的元素
-
-
+  **可以对其中的内容记性修改和删除，同时也可以创建新的元素**
 
 3. 文档中的所有节点组成了一个文档树\(或节点树\)
 
-
-
- * document对象是一棵文档树的根
-
-
-
-
+  **document对象是一棵文档树的根**
 
 ### DOM标准发展历程
 
-
-
 DOM标准发展至今，共三级：
-
-
 
 1. **DOM1级规范：**98年，最初的DOM规范。定义文档内容的底层结构，所有浏览器100%都兼容。
 
-
-
 2. **DOM2级规范：**基于DOM1级增加了很多交互模块，比如：
 
+  - DOM Level 2 Core:基于DOM1扩展更多方法和属性
 
+  - DOM Level 2 Style: 专门操作HTML样式的API
 
- * DOM Level 2 Core:基于DOM1扩展更多方法和属性
+  - DOM Level 2 Traversal and Range: 专门遍历DOM树结构的API
 
-
-
- * DOM Level 2 Style: 专门操作HTML样式的API
-
-
-
- * DOM Level 2 Traversal and Range: 专门遍历DOM树结构的API
-
-
-
- * DOM Level 2 Event:标准化的事件API。仅IE8不支持，自成一套
-
-
+  - DOM Level 2 Event:标准化的事件API。仅IE8不支持，自成一套
 
 3. **DOM3级规范**：进一步扩展了方法和属性，添加了新类型
 
 
 
 ### DOM操作
-
-
 
  通过可编程的对象模型，JavaScript获得了足够的能力来创建动态的HTML，比如如下操作：
 
