--- a/433-递归api.md
+++ b/433-递归api.md
@@ -1,23 +1,22 @@
-### NodeIterator
+### NodeIterator(迭代器)对象
 
-1. 迭代器对象
-
-  * 从指定对象开始，以深度优先原则，以此遍历每个子对象，自动判断要遍历的下一个节点
+ * 从指定对象开始，以深度优先原则，以此遍历每个子对象，自动判断要遍历的下一个节点
 
     `var interator = document.createNodeIterator(root,whatToShow,null,false);`
 
-  * 前两个参数：
+ * 前两个参数：
 
     * root：开始节点对象
     * NodeFilter.SHOW ALL 
       NodeFilter.SHOW ELEMENT
       或NodeFilter.SHOW ALL \| NodeFilter.SHOW SHOW TEXT
 
-  * 访问每个节点：iterator.nextNode\(\)
+ * 访问每个节点：iterator.nextNode\(\)
 
     * 返回下一个节点对象
 
-  * 循环遍历每个节点：2步
+
+ * 循环遍历每个节点：2步
 
     * 必须先执行一此nextNode\(\)，才是第一个节点
     * while循环，直到nextNode\(\)返回null为止
@@ -26,7 +25,7 @@
             //操作当前节点对象：currNode
            }
 
-2. TreeWalker对象
+###TreeWalker对象
 
   * TreeWalker对象是升级版的NodeIterator对象
 
