--- a/432-通过css获取元素.md
+++ b/432-通过css获取元素.md
@@ -1,6 +1,19 @@
 ### 通过CSS类选取元素
 
-HTML5中新添了一个可以根据class名称选取元素的方node.getElementByClassName('className');
+HTML5中新添了一个可以根据class名称选取元素的方法**node.getElementByClassName('className');**
+
+    <div id = "news">
+       <p class = "mainTitle">新闻标题1</p>
+       <p class = "mainTitle">新闻标题2</p>
+       <p class = "mainTitle">新闻标题3</p>
+    </div>
+ 
+    ---
+
+    var div = document.getElementById("news");
+    var list = div.getElementsByClassName("mainTitle");
+    console.log(typeof list);
+    console.log(list.length);
 
 
 
