--- a/432-通过css获取元素.md
+++ b/432-通过css获取元素.md
@@ -1,22 +1,34 @@
 ### 通过CSS类选取元素
 
-HTML5中新添了一个可以根据class名称选取元素的方法**node.getElementByClassName('className');**
+HTML5中新添了一个可以根据class名称选取元素的方法**node.getElementByClassName\('className'\);**
 
-    <div id = "news">
-       <p class = "mainTitle">新闻标题1</p>
-       <p class = "mainTitle">新闻标题2</p>
-       <p class = "mainTitle">新闻标题3</p>
-    </div>
- 
-    ---
+```
+<div id = "news">
+   <p class = "mainTitle">新闻标题1</p>
+   <p class = "mainTitle">新闻标题2</p>
+   <p class = "mainTitle">新闻标题3</p>
+</div>
 
-    var div = document.getElementById("news");
-    var list = div.getElementsByClassName("mainTitle");
-    console.log(typeof list);
-    console.log(list.length);
+---
+
+var div = document.getElementById("news");
+var list = div.getElementsByClassName("mainTitle");
+console.log(typeof list);
+console.log(list.length);
+```
+
+### 通过CSS选择器选取元素
+
+HTML5还定义了如下两个可以根据CSS选择器来选取元素的方法
+
+1. 返回第一个匹配的node.querySelector\("selector"\);
+
+2. 返回全部匹配的
+
+  node.querySelectorAll\("selector"\);
+
+```
+  <div id = "news">  ```
 
 
 
- 
-
- 
