--- a/432-通过css获取元素.md
+++ b/432-通过css获取元素.md
@@ -23,12 +23,10 @@ HTML5还定义了如下两个可以根据CSS选择器来选取元素的方法
 
 1. 返回第一个匹配的node.querySelector\("selector"\);
 
-2. 返回全部匹配的
-
-  node.querySelectorAll\("selector"\);
-
-```
-  <div id = "news">  ```
+2. 返回全部匹配
+   node.querySelectorAll\("selector"\);
+  
 
 
+`<div id = "news">`
 
