--- a/432-通过css获取元素.md
+++ b/432-通过css获取元素.md
@@ -26,6 +26,7 @@ HTML5还定义了如下两个可以根据CSS选择器来选取元素的方法
 2. 返回全部匹配
   node.querySelectorAll\("selector"\);
 
+
 ```
 <div id = "news">
    <p class = "mainTitle">新闻标题1</p>
@@ -41,6 +42,8 @@ var ps1 = div.querySelector(".mainTitle,.subTitle");
 
 //一个对象
 console.log(typeof ps1); 
+
+var ps2 = div.querySelectorAll(".mainTitle,.subTitle");
 
 //一个集合
 console.log(ps2.length);
