--- a/432-通过css获取元素.md
+++ b/432-通过css获取元素.md
@@ -49,3 +49,17 @@ var ps2 = div.querySelectorAll(".mainTitle,.subTitle");
 console.log(ps2.length);
 ```
 
+### 其他选取
+
+* **document.all** 是一个类数组对象，是页面中所有元素的一个集合，具体做法
+
+  * document.all\[index\]
+  * document.all\['id'\]
+  * document.all.id
+  * document.all\['name'\]
+  * document.all.tags\['tagName'\]
+
+
+  **通过document.all检索一个元素，已经被getElementById\(\)\/getElementsByTagName\(\)以及getElementsByName\(\)等方法所取代**
+
+
