--- a/432-通过css获取元素.md
+++ b/432-通过css获取元素.md
@@ -59,7 +59,25 @@ console.log(ps2.length);
   * document.all\['name'\]
   * document.all.tags\['tagName'\]
 
+   **通过document.all检索一个元素，已经被getElementById\(\)\/getElementsByTagName\(\)以及getElementsByName\(\)等方法所取代**
 
-  **通过document.all检索一个元素，已经被getElementById\(\)\/getElementsByTagName\(\)以及getElementsByName\(\)等方法所取代**
 
+- **document.documentElement**
 
+  document.documentElement对象是整个HTML文档的根元素的引用
+  
+  document.documentElement === document.lastChild
+
+- **document.head**
+
+  document.head对象是HTML文档中<head>元素的引用
+
+  document.head === document.lastChild.firstChild
+
+- **document.body**
+
+ document.body 对象是HTML文档中<body>元素的引用
+
+ document.body === document.lastChild.firstChild
+
+    
