--- a/432-通过css获取元素.md
+++ b/432-通过css获取元素.md
@@ -51,7 +51,7 @@ console.log(ps2.length);
 
 ### 其他选取
 
-* **document.all** 是一个类数组对象，是页面中所有元素的一个集合，具体做法
+1. **document.all** 是一个类数组对象，是页面中所有元素的一个集合，具体做法
 
   * document.all\[index\]
   * document.all\['id'\]
@@ -61,20 +61,19 @@ console.log(ps2.length);
 
    **通过document.all检索一个元素，已经被getElementById\(\)\/getElementsByTagName\(\)以及getElementsByName\(\)等方法所取代**
 
-
-- **document.documentElement**
+2. **document.documentElement**
 
   document.documentElement对象是整个HTML文档的根元素的引用
   
   document.documentElement === document.lastChild
 
-- **document.head**
+3. **document.head**
 
   document.head对象是HTML文档中<head>元素的引用
 
   document.head === document.lastChild.firstChild
 
-- **document.body**
+4. **document.body**
 
  document.body 对象是HTML文档中<body>元素的引用
 
