--- a/441-元素节点对象.md
+++ b/441-元素节点对象.md
@@ -32,13 +32,32 @@ nodeName,nodeType,nodeValue,
 
 - HTML文档中，每种HTML都对应一个专门的类型，如：
 
+   - button -> HTMLButtonElement
+   - form   -> HTMLFormElement
+   - table  -> HTMLTableElement
+   - img    -> HTMLImageElement
+   - select -> HTMLSelectElement
     
 
+- 其实所有HTMLXXXElement类型，都是HTMLElement类型的子类型，比如：
 
+   ![](/assets/屏幕快照 2016-08-25 上午8.57.45.png)
 
+- 每种HTMLXXXElement元素，除了具有HTMLElement类型公共的属性和方法外，还扩展了自己对应的HTML元素特有的属性和方法，比如：
 
+  HTMLImageElment:扩展了src属性
+  HTMLTableElement:扩展了rows,toBodies等属性
+  HTMLSelectElement：扩展了options属性等
 
+- 凡是HTMLElement类型及其子类型提供的属性和方法，都称为HTML DOM
 
+- HTML DOM专门用于简化对HTML元素对象的操作
+
+- 总结
+
+  - 核心DOM类型，可对XML、HTML文档中的所有元素节点，执行增加、删除、修改、查询操作，但API相对繁琐。
+
+ 
 
 
 
