--- a/441-元素节点对象.md
+++ b/441-元素节点对象.md
@@ -1,74 +1,61 @@
 ### 元素节点对象的原型链
 
-- 文档中的元素都是Element类型的对象
+* 文档中的元素都是Element类型的对象
 
-- Element类型的对象，通过原型继承自Node.prototype，所以Node类型是Element类型的父类型。
+* Element类型的对象，通过原型继承自Node.prototype，所以Node类型是Element类型的父类型。
 
-- Node类型定义的属性和方法，Element对象都具备，
+* Node类型定义的属性和方法，Element对象都具备，
 
-  - 比如：
-nodeName,nodeType,nodeValue,
-  - 再比如：firstChild/lastChild/childNodes
+  * 比如：
+    nodeName,nodeType,nodeValue,
+  * 再比如：firstChild\/lastChild\/childNodes
 
   ![](/assets/屏幕快照 2016-08-24 下午9.11.04.png)
 
-- Element类型，除从Node类型继承了所有节点公共的属性和方法外，还扩展了专门操作节点的属性和方法
+* Element类型，除从Node类型继承了所有节点公共的属性和方法外，还扩展了专门操作节点的属性和方法
 
-- 元素节点与普通节点的不同，是元素节点可以有特性(Attribute)和内容(innerHTML)
+* 元素节点与普通节点的不同，是元素节点可以有特性\(Attribute\)和内容\(innerHTML\)
 
-- 由Element类型提供的所有元素对象共有的属性和方法，也称为核心DOM.
+* 由Element类型提供的所有元素对象共有的属性和方法，也称为核心DOM.
 
- ![](/assets/屏幕快照 2016-08-24 下午9.21.25.png)
+  ![](/assets/屏幕快照 2016-08-24 下午9.21.25.png)
+
 
 ### 核心DOM与HTML DOM
 
-- 在HTML文档中，所有HTML元素对象，又都是HTMLElement类型的对象
+* 在HTML文档中，所有HTML元素对象，又都是HTMLElement类型的对象
 
-- HTMLElement类型是Element类型的子类型，所以Element类型提供的属性和方法，所有HTML元素对象都可使用
-![](/assets/屏幕快照 2016-08-24 下午9.26.14.png)
-  
-- HTMLElement类型除继承了Element类型的属性和方法外，还重点扩展了简化操作HTML文档中元素对象的标准属性
-![](/assets/屏幕快照 2016-08-24 下午9.30.24.png)
+* HTMLElement类型是Element类型的子类型，所以Element类型提供的属性和方法，所有HTML元素对象都可使用
+  ![](/assets/屏幕快照 2016-08-24 下午9.26.14.png)
 
-- HTML文档中，每种HTML都对应一个专门的类型，如：
+* HTMLElement类型除继承了Element类型的属性和方法外，还重点扩展了简化操作HTML文档中元素对象的标准属性
+  ![](/assets/屏幕快照 2016-08-24 下午9.30.24.png)
 
-   - button -> HTMLButtonElement
-   - form   -> HTMLFormElement
-   - table  -> HTMLTableElement
-   - img    -> HTMLImageElement
-   - select -> HTMLSelectElement
-    
+* HTML文档中，每种HTML都对应一个专门的类型，如：
 
-- 其实所有HTMLXXXElement类型，都是HTMLElement类型的子类型，比如：
+  * button -&gt; HTMLButtonElement
+  * form   -&gt; HTMLFormElement
+  * table  -&gt; HTMLTableElement
+  * img    -&gt; HTMLImageElement
+  * select -&gt; HTMLSelectElement
 
-   ![](/assets/屏幕快照 2016-08-25 上午8.57.45.png)
 
-- 每种HTMLXXXElement元素，除了具有HTMLElement类型公共的属性和方法外，还扩展了自己对应的HTML元素特有的属性和方法，比如：
+* 其实所有HTMLXXXElement类型，都是HTMLElement类型的子类型，比如：
+
+  ![](/assets/屏幕快照 2016-08-25 上午8.57.45.png)
+
+* 每种HTMLXXXElement元素，除了具有HTMLElement类型公共的属性和方法外，还扩展了自己对应的HTML元素特有的属性和方法，比如：
 
   HTMLImageElment:扩展了src属性
   HTMLTableElement:扩展了rows,toBodies等属性
   HTMLSelectElement：扩展了options属性等
 
-- 凡是HTMLElement类型及其子类型提供的属性和方法，都称为HTML DOM
+* 凡是HTMLElement类型及其子类型提供的属性和方法，都称为HTML DOM
 
-- HTML DOM专门用于简化对HTML元素对象的操作
+* HTML DOM专门用于简化对HTML元素对象的操作
 
-- 总结
+* **总结**
 
-  - 核心DOM类型，可对XML、HTML文档中的所有元素节点，执行增加、删除、修改、查询操作，但API相对繁琐。
-
- 
-
-
-
-
-
-
-
-
-
-
-
-
+  核心DOM类型，可对XML、HTML文档中的所有元素节点，执行增加、删除、修改、查询操作，但API相对繁琐。
 
 
