--- a/443-元素的属性.md
+++ b/443-元素的属性.md
@@ -60,3 +60,47 @@
   ```
 
 
+### 移除属性
+
+可以使用如下两种方式删除一个属性
+
+1. element.removeAttribute\("属性名"\);
+
+2. element.removeAttributeNode\(attrNode\);
+
+  ```
+  <a id="bdlink" class="sitelink" href="javascript:void(0)" onclick="jump()"><百度搜索></a>
+
+  --- 
+
+  a.removeAttribute("class");
+  ```
+
+
+### 判断属性
+
+如下方法可用于判定元素是否拥有指定属性；
+
+1. element.hasAttribute\("属性名"\); \/\/true或false
+
+2. element.hasAttributes\(\); \/\/是否拥有属性，IE8以下版本不支持此方法
+
+  ```
+  document.getElementById("bt1").hasAttribute("onclick");
+  ```
+
+### Property VS Attribute
+
+- **特性(Attribute):**在HTML元素开始标签中定义的HTML标准属性或自定义属性。用get/setAttribute()访问
+
+- **属性(Property):**内存中的对象上定义的用.访问的属性
+
+- **共同点：**操作标准属性是，二者通用！
+
+- **差异：**操作自定义属性时，不通用!
+
+  - elem:新定义属性=值；//getAttribute()访问不到
+
+  - elem.setAttribute("自定义属性"，"值");
+   //elem.自定义属性访问不到
+
