--- a/723-层次选择器.md
+++ b/723-层次选择器.md
@@ -2,4 +2,39 @@
 
  - 根据select1找到节点后，再去寻找子节点中符合select2的节点(重要)
 
-  
+       //选择body内的所有div元素
+       $("#btn1").click(function(){
+          $("body div").css("background","#bbffaa");
+       })
+
+# select1>select2
+
+ - 只查找直接子节点，不查找间接子节点
+ - 与$(select1 空格 select2)选择器有区别，$(select1>select2)选择器是查找后代元素
+
+       //在body内选择元素名是div的元素
+       $("#btn2").click(function(){
+          $(“body > div”).css("background","bbffaa");
+        });
+
+
+# select1+select2
+
+ - 选取紧接在select1元素后的select2元素
+
+       //选取所有class为one的下一个div元素
+       $("#btn3").click(function(){
+           $(".one+div").css("background","#bbffaa");
+       });
+
+# select1~select2
+
+  - 选取select1元素之后的所有select2元素
+
+        //选择id为two的元素后面的所有div兄弟元素
+        $("#btn4").click(function(){
+
+             $("#two~div").css("background","#bbffaa");
+
+        });
+
