--- a/724-过滤选择器.md
+++ b/724-过滤选择器.md
@@ -1,2 +1,51 @@
 # 什么是过滤选择器
 
+  - 过滤选择器主要是通过特定的过滤规则来筛选出所需的DOM元素
+
+  - 过滤选择器的特定都以“：”开头
+
+  - 按照不同的过滤规则，过滤选择器可以分为基本过滤、内容过滤、可见性过滤、属性过滤、子元素过滤和表单过滤选择器
+
+# 基本过滤选择器
+
+  - 过滤选择器以“：”或“[]”开始
+  
+    ![](/assets/屏幕快照 2016-08-31 上午11.57.02.png)
+
+  - 示例
+
+        //选择第一个div元素
+        $("#btn").click(function(){
+           $("div:first").css("background","#bfa");
+        });
+
+        //选择最后一个div元素
+        $("#btn2").click(function(){
+            $("div:last").css("background","#bfa");
+        });
+
+        //选择class不为one的所有div元素
+        $("#btn3").click(function(){
+            $(“div:not(.one)”).css("background","#bfa");
+        });
+
+        //选择索引值为偶数的div元素
+        $("btn4").click(function(){
+            $("div:even").css("background","#bfa");
+        });
+
+        //选择索引值为奇数的元素
+        $("#btn").click(function(){
+
+            $("div:odd").css("background","#bfa");
+        });
+
+        //选择索引值为3的元素        
+        $("#btn").click(function(){
+
+            $("div:eq(3)").css("background","#bfa");
+
+        });
+
+        
+       
