--- a/724-过滤选择器.md
+++ b/724-过滤选择器.md
@@ -47,5 +47,20 @@
 
         });
 
-        
+         //选择索引值大于3的元素
+         $("#btn").click(function(){
+
+              $("div:qt(3)").css("background","#bfa");
+
+          });
+
+         //选择索引值小于3的元素
+         $("#btn").click(function(){
+
+             $("div:lt(3)").css("background","#bfa");
+
+          });
+
+
+
        
