--- a/724-过滤选择器.md
+++ b/724-过滤选择器.md
@@ -62,5 +62,37 @@
           });
 
 
+# 内容过滤选择器
 
-       
+   - 内容过滤选择器包含
+
+      - contains(text) 匹配包含给定文本的元素
+      - empty 匹配所有不包含子元素或文本的空元素
+
+      - has(selector) 匹配含有选择器所匹配的元素
+
+      - parent 匹配含有子元素或者文本的元素
+
+            //选取含有文本“di”的div元素
+            $("#btn1").click(function(){
+
+                $(“div:contains(di)”).css("background","#bbffaa");
+
+            })
+
+            //选取不包含子元素(或者文本元素)的div空元素
+            $("#btn2").click(function(){
+        
+                $("div:empty").css("background","##bbffaa");
+            })
+
+            //选取含有class为mini元素的div元素
+            $("#btn3").click(function(){
+               $("div:has(.mini)").css("background","#bbffaa");
+            })
+   
+            //选取含有子元素(或者文本元素)的div元素
+            $("#btn4").click(function(){
+
+               $("div:parent").css("background","#bbffaa");
+            })
