--- a/724-过滤选择器.md
+++ b/724-过滤选择器.md
@@ -96,3 +96,63 @@
 
                $("div:parent").css("background","#bbffaa");
             })
+
+
+# 可见性过滤选择器
+
+  - 可见性过滤选择器包含
+
+    -：hidden 匹配所有不可见元素，或type为hiden的元素
+   
+    -：visible匹配所有的可见元素
+
+         //选取所有不可见的元素
+         $("#btn hidden").click(function(){
+              $("div:hidden").show(3000).css("background","#bbffaa");
+
+         })
+
+         //选取所有可见的元素
+         $("#btn visible").click(function(){
+            $("div:visible").css("background","#FF6500");
+
+         })
+
+
+# 属性过滤选择器
+
+  - 属性过滤器包含如下：
+
+    - [attribute] 匹配所有具有attribute属性的元素
+    - [attribute = value] 匹配属性等于value的元素
+
+    - [attribute != value] 匹配属性不等于value的元素
+
+    - [attribute ^= value] 匹配属性以某些值开始的元素
+
+    - [attribute $= value] 匹配属性以某些值结尾的元素
+
+    - [attribute *= value] 匹配属性以包含某些值的元素
+
+    - [attributeFilter1][attributeFilter2] 复合属性过滤选择器，需要同时满足多个条件时使用
+
+          //选取含有 属性title 的div元素. 
+          $('#btn1').click(function(){
+
+               $('div[title]').css("background","#bbffaa");
+
+          })
+
+           //选取 属性title值等于 test 的div元素.
+           $('#btn2').click(function(){
+
+               $('div[title=test]').css("background","#bbffaa");
+
+          })
+
+          //选取 属性title值不等于 test 的div元素.
+          $('#btn3').click(function(){
+
+              $('div[title!=test]').css("background","#bbffaa");
+
+          })   
