--- a/724-过滤选择器.md
+++ b/724-过滤选择器.md
@@ -155,4 +155,117 @@
 
               $('div[title!=test]').css("background","#bbffaa");
 
-          })   
+          })  
+
+          //选取 属性title值 以 te 开始 的div元素. 
+          $('#btn4').click(function(){
+
+              $('div[title^=te]').css("background","#bbffaa");
+
+          })
+
+          //选取 属性title值 以 est 结束 的div元素.
+          $('#btn5').click(function(){
+
+             $("div[title$=est]").css("background","#bbffaa");
+
+          })
+
+          //选取 属性title值 含有 es 的div元素.
+          $('#btn6').click(function(){
+
+              $("div[title*=es]").css("background","#bbffaa");
+
+          })
+
+          //组合属性选择器,首先选取有属性id的div元素，然后在结果中 选取属性title值 含有 es 的元素.
+          $('#btn7').click(function(){
+
+            $("div[id][title*=es]").css("background","#bbffaa");
+
+          })
+
+# 子元素过滤选择器
+
+ - 子元素过滤选择器包括
+
+    - : nth-child(index/even/odd) 选取每个父元素下的第index个子元素或者奇偶元素(index从1算起)
+
+    - : first-child 选取每个父元素的第一个子元素
+
+    - : last-child 选取每个父元素的最后一个子元素
+
+    - : only-child 如果某个元素是它父元素中唯一的子元素，那么将会被匹配
+
+          //选取每个父元素下的第2个子元素
+          $('#btn1').click(function(){
+
+             $('div.one :nth-child(2)').css("background","#bbffaa");
+
+          })
+ 
+          //选取每个父元素下的第一个子元素 
+          $('#btn2').click(function(){
+
+           $('div.one :first-child').css("background","#bbffaa");
+
+          })
+
+          //选取每个父元素下的最后一个子元素
+          $('#btn3').click(function(){
+
+             $('div.one :last-child').css("background","#bbffaa");
+
+          })
+
+          //如果父元素下的仅仅只有一个子元素，那么选中这个子元素
+
+          $('#btn4').click(function(){
+
+             $('div.one :only-child').css("background","#bbffaa");
+
+          })
+
+# 表单属性过滤器
+ 
+   - 表单属性过滤选择器包括
+
+    - ：enabled 选取所有可用元素
+    - ：disabled 选取所有不可用元素
+
+    - ：checked 选取所有被选中的元素(单选框或多选框)
+
+    - ：selected 选取所有被选中的元素（下拉列表）
+
+           //对表单内 可用input 赋值操作. 
+           $('#btn1').click(function(){
+
+               $("#form1 input:enabled").val("这里变化了！");
+
+               return false;
+
+           })
+
+           //对表单内 不可用input 赋值操作.
+           $('#btn2').click(function(){
+
+              $("#form1 input:disabled").val("这里变化了！");
+
+              return false;
+
+           })
+
+           //打印表单内 被选中的个数
+           $("#btn3").click(function(){
+
+              alert($("input[name=newsletter]:checked").length);
+
+           })
+
+           //打印表单内 被选中的内容
+           $("#btn4").click(function(){
+
+               alert($("select>option:selected").text());
+    
+           });
+
