--- a/734-创建、插入、删除.md
+++ b/734-创建、插入、删除.md
@@ -1,3 +1,56 @@
 # 创建DOM节点
 
- - 
+ - jQuery使用$()工厂函数来创建节点，向$()工厂函数传递的是HTML代码字符串
+
+ - jQuery允许通过HTML代码字符串直接创建元素节点、文本节点及属性节点。
+
+        //创建一个<li>元素，包括元素节点、文本节点和属性节点
+        var $li = $("<li title="香蕉">香蕉</li>");
+
+        //获取<ul>节点<li>的父节点
+        var $parent = $("ul");
+
+        //添加到<ul>节点中，使之能在网页中显示
+        $parent.append("$li");
+
+# 插入DOM节点
+
+ - 内部插入节点
+
+   - append() 作为最后一个子节点添加进来
+   
+   - prepend() 作为第一个子节点添加进来
+
+ - 外部插入节点
+ 
+  - after() 作为下一个兄弟节点添加进来
+
+  - before() 作为上一个节点添加进来
+
+         var $li_1 = $("<li title = "香蕉">香蕉</li>");
+         var $li_2 = $("<li title = "雪梨">雪梨</li>");
+
+         var $parent = $("ul");
+
+         $parent.append($li_1);
+         $parent.prepent($li_2);
+
+# 删除DOM节点
+
+ - remove() 移除
+ - remove(selector) 按选择器定位后删除
+ - empty() 清空节点
+
+       //获取第二个<li>元素节点后，将它从网页中删除
+       $("ul li:eq(1)").remove();
+
+       //把<li>元素中属性title不能与“菠萝”的<li>元素删除
+       $("ul li").remove("li[title != 菠萝]");
+
+       //获取第二个<li>元素节点后，清空此元素里的内容
+       $("ul li:eq(1)").empty();
+        
+
+
+
+  
