--- a/736-复制.md
+++ b/736-复制.md
@@ -4,4 +4,16 @@
 
  - clone(true) 复制的节点也具有行为(事件处理)
 
-   
+       $("ul li").click(function(){ 
+
+            // 复制当前点击的节点，并将它追加到<ul>元素
+            $(this).clone().appendTo("ul");
+
+        })
+
+       $("ul li").click(function(){
+
+           //可以复制自己，并且他的副本也有同样功能
+           $(this).clone(true).appendTo("ul");
+
+       })
