--- a/741-页面加载后执行.md
+++ b/741-页面加载后执行.md
@@ -1,6 +1,81 @@
 # 代码执行的时机选择
   
-  
- 
+ - $(document).ready()方法和window.onload事件具有相似的功能，但在执行时机方面是有区别的
 
+  - window.onload事件是在网页中所有的元素(包括元素的所有关联文件)完全加载到浏览器后才执行的
+
+  - $(document).ready()方法注册的事件处理程序，在DOM完全加载后就可以调用
+
+ - 一般来讲，$(document).ready()的执行要优于window.onload事件 
   
+ - 需要注意的是，$(document).ready()方法操作网页中的元素时，可能关联文件未加载完毕
+
+# 基于一个页面执行多个脚本
+
+  - 通过JS注册事件处理程序的传统机制，是把一个函数执行给DOM元素的对应属性
+ 
+        <body onload="start();">
+
+        或
+
+        window.onload = start;
+
+     如果指定第二个函数的话那么就会取代第一个函数
+
+- 通过$(document).ready()每次都会向内部的行为队列中添加一个新的函数，当页面加载完成后，所有函数都将得到执行
+
+      $(document).ready(function(){
+ 
+         firstFun();
+      });
+
+      $(document).ready(function(){
+         secondFun();
+      });
+
+# 简写代码
+
+  - $(document).ready()实际上是在基于document这个元素而构建的jQuery对象，调用了ready()方法
+
+  - $()工厂函数为我们提供了一种简写方式，即调用这个函数而不用传递参数，该函数的行为就是传递了document参数
+
+  - 也可以直接向工厂函数$()中传递一个函数，此时jQuery会在内部执行对ready()隐式调用
+
+        $(document).ready(function(){
+           //代码
+        });
+
+        也可以写成
+
+        $().ready(function(){
+           //代码
+        });
+
+        或
+     
+        $(function(){
+           //代码
+        })
+  
+# 与其他库共存
+
+ - 在一些情况下，可能会在一个页面中使用多个JS库，由于多个库可能都使用$，因此需要一种方式来避免名称冲突
+
+ - jQuery提供了一个.noConflict()的方法，没用该方法可以将将$标识符的控制权交给其他的库
+
+ - 如果将$让给其他库的话，那么$就不再表示jQuery了，在jQuery中也不能使用$
+
+ - 如果还想使用$的话，有一个$().ready中的使用技巧，传递毁掉函数的时候可以传递一个参数--jQuery对象本身，可重新命名jQuery为$
+
+       //将变量$的控制权交给其他JS库
+       jQuery.noConflict();
+
+       //使用jQuery设定页面加载时执行的函数重新花去$的控制权
+       jQuery(function($){});
+
+       //定义匿名函数并设置形参为$,重新获取$的控制权
+
+       (function($){
+          ...
+        })(jQuery);
+
