--- a/743-事件冒泡.md
+++ b/743-事件冒泡.md
@@ -1,2 +1,23 @@
 # 什么是事件冒泡
 
+ - 子节点产生的事件会依次向上抛给父节点
+
+ ![](/assets/屏幕快照 2016-08-31 下午8.49.47.png)
+
+# 如何取消事件冒泡
+
+ - e.stopPropagation() 可以取消事件冒泡
+
+         $("div").click(function(e){
+            alert("点击了div");
+ 
+         });
+
+         $("a").click(function(e){
+
+             alert("点击了一个连接");
+
+             e.stopPropagation();
+         });
+
+
