--- a/811-属性介绍.md
+++ b/811-属性介绍.md
@@ -2,4 +2,8 @@
 
  - 无论是实现功能还是展示页面元素，表单在HTML中都有不可替代的作用
 
- - 
+ - 在其他版本的HTML中，表单包含的元素非常有限，并且属性也不多，尤其是在数据交互过程中数据的验证需要编写大量的JS代码
+
+ - 上诉的不足，都已经在H5中被克服了，H5在以上的基础上增加了很多标签以及属性，为开发人员带来了极大的方便
+
+ - input类型
