--- a/812-属性介绍.md
+++ b/812-属性介绍.md
@@ -6,3 +6,12 @@
 
        <input type="email" />
 ![](/assets/屏幕快照 2016-09-04 下午4.02.33.png)
+
+# 搜索类型
+
+ - 功能描述： 输入搜索关键字操作文本框
+
+ - 语法
+
+       <input type="search /">
+![](/assets/屏幕快照 2016-09-04 下午4.05.54.png)
