--- a/812-属性介绍.md
+++ b/812-属性介绍.md
@@ -25,4 +25,10 @@
        <input type="url" />
 ![](/assets/屏幕快照 2016-09-04 下午4.10.45.png)
 
-# 
+# 电话号码类型
+
+ - 功能描述：主要针对电话号码的输入，能够指示浏览器根据不同的设备进行调整
+
+ - 语法
+    
+       <input type="tel" />
