--- a/812-属性介绍.md
+++ b/812-属性介绍.md
@@ -41,3 +41,12 @@
  - 语法
 
        <input type="number" />
+
+ - 属性
+
+  - min:当前域你能接受的最小值
+
+  - max:当前域能接受的最大值
+
+  - step: 决定了域所接受值递增或递减的步长，默认为1
+![](/assets/屏幕快照 2016-09-04 下午4.21.47.png)
