--- a/812-属性介绍.md
+++ b/812-属性介绍.md
@@ -53,4 +53,14 @@
 
 # 范围类型
 
+ - 功能描述：允许用户选择一个范围的数值
+
+ - 语法
+
+       <input type="range" min="10" max="1000" value="50" />
+
+ - 属性
+
+  - min：范围
+
 
