--- a/812-属性介绍.md
+++ b/812-属性介绍.md
@@ -58,7 +58,7 @@
  - 语法
 
        <input type="range" min="10" max="1000" value="50" />
-
+![](/assets/屏幕快照 2016-09-04 下午4.26.40.png)
  - 属性
 
   - min：范围的下限值
