--- a/812-属性介绍.md
+++ b/812-属性介绍.md
@@ -66,6 +66,13 @@
   - step:声明该值递增或递减的步长
   - value:设置初始值
 
+# 颜色类型
 
+ - 功能描述：预定义的颜色拾取控件
 
+ - 语法
 
+        <input type="color" />
+![](/assets/屏幕快照 2016-09-04 下午4.28.38.png)
+
+# riqi leixing 
