--- a/812-属性介绍.md
+++ b/812-属性介绍.md
@@ -75,4 +75,30 @@
         <input type="color" />
 ![](/assets/屏幕快照 2016-09-04 下午4.28.38.png)
 
-# riqi leixing 
+# 日期类型
+
+ - 功能描述：创建一个日期输入域
+ 
+ - 语法
+
+       <input type="date" /> 
+![](/assets/屏幕快照 2016-09-05 上午10.39.29.png)
+
+# 周类型
+
+ - 功能描述：与date类型相似，但是只能选择周
+
+ - 语法
+
+       <input type="week" />
+![](/assets/屏幕快照 2016-09-05 上午10.40.43.png)
+
+# 月份类型
+
+ - 功能描述：与date类型相似，但是只能选择一个月份
+
+ - 语法
+
+        <input type="month" />
+ ![](/assets/屏幕快照 2016-09-05 上午10.41.54.png)
+
