--- a/831-验证属性.md
+++ b/831-验证属性.md
@@ -9,3 +9,13 @@
 
 # Pattern属性
 
+ - Pattern属性的作用是实现元素的验证，他支持使用正则表达式定制验证规则
+
+ - 语法
+
+       <input type="text" pattern="13[0-9]\d{8}" />
+![](/assets/屏幕快照 2016-09-05 上午11.09.47.png)
+
+# Min和Max属性
+
+ - min/max/step属性永不为包含数字或日期的input类型规定限定
