--- a/831-验证属性.md
+++ b/831-验证属性.md
@@ -19,3 +19,30 @@
 # Min和Max属性
 
  - min/max/step属性永不为包含数字或日期的input类型规定限定
+
+ - 语法
+
+       <input type="number" min="1" max="5">
+![](/assets/屏幕快照 2016-09-05 下午12.06.20.png)
+
+# Minlength和Maxlength
+
+ - Minlength和Maxlength属性的作用是定制元素允许的最小字符数和最大字符数
+ 
+ - 语法
+
+       <input type="text" minlength="1" maxlength="5">
+
+ - validity属性
+
+ - 在HTML5提供的有关表单验证的新特性中，提供了一个validity属性，该属性是利用validitySate对象描述指定元素的有效状态
+
+ - ValidityState对象代表了有效状态，可以实现对指定元素进行元素验证功能，该对象提供了一系列的属性，这些属性用于描述指定元素的有效状态
+
+ - 如何获取ValidityState对象，使用其提供的属性内容
+
+  - 语法：指定元素 validity可以得到ValidityState对象
+
+  - 例子：Elem/validity/valid
+
+    
