--- a/832-验证状态.md
+++ b/832-验证状态.md
@@ -17,3 +17,38 @@
        }else{
           alert("通过");
        }
+
+# typeMismatch
+
+ - 如果输入语法不符合指定的类型，那么这个状态是true
+
+ - 例如：email类型输入的内容不是电子邮件地址
+
+        if(email.validity.typeMismatch){
+           alert("Email格式不正确");
+       }else{
+           alert("通过")
+       }
+
+# PatternMismatch状态
+
+ - 如果输入内容与所设置模式不匹配，那么这个状态就是true
+
+       if(phone.validity.patternMismatch){
+
+          alert("电话号码格式不正确");
+
+        }else{
+ 
+          alert("通过");
+        }
+
+# tooLong状态
+
+如果输入内容长度大于maxlength属性指定值，那么这个状态就是true
+
+    if(pwd.validity.tooLong){
+  alert("密码长度不能超出12位");
+}else{
+  alert("通过");
+}
