--- a/832-验证状态.md
+++ b/832-验证状态.md
@@ -52,3 +52,38 @@
 }else{
   alert("通过");
 }
+
+# rangeUnderflow状态
+
+如果输入内容小于min属性声明的值，那么这个状态就是true
+
+    if(age.validity.rangeUnderflow){
+       alert("年龄不符合要求");
+    }else{
+       alert("通过");
+    }
+
+# stepMismatch状态
+
+如果给定的值与min/max/step不一致，那么这个状态就是true
+
+    if(elem.validity.stepMismatch){
+       alert("范围设置不准确");
+    }else{
+       alert("通过");
+    }
+
+# customError状态
+
+如果元素使用setCustomValidity()方式设置了自定义错误，那么这个状态就是true
+
+      if(uname.value == ""){
+
+        uname.setCustomValidity("用户名称不能为nil");
+
+      }
+
+      if(uname.validity.customError){
+
+        alert("验证未通过");
+     }
