--- a/842-编程实现视频播放器.md
+++ b/842-编程实现视频播放器.md
@@ -71,3 +71,16 @@
            }
 
         }
+
+
+# 属性
+
+H5新增的针对视频元素处理属性如下
+
+ - paused:媒体处于播放或未播放状态，这个值为true
+
+ - ended:如果媒体已经结束播放，这个值为true
+
+ - duration:返回媒体时长，以秒为单位
+
+ - currentTime:获取或设置媒体播放位置
