--- a/851-在h5中播放音频.md
+++ b/851-在h5中播放音频.md
@@ -1,2 +1,13 @@
 # audio元素
 
+- audio元素可以实现在HTML页面中嵌入音频内容，该元素的属性可以设置是否自动播放，预加载及循环播放等
+
+- audio元素提供了播放、暂停和音量控件来控制音频
+
+- **IE8或者更早的IE版本不支持<audio>元素**
+
+- 使用audio元素提供三种音频格式的文件：MP3/Ogg/Wav
+
+  - MP3:采用mpeng音频解码器
+
+  - 
