--- a/851-在h5中播放音频.md
+++ b/851-在h5中播放音频.md
@@ -15,3 +15,20 @@
   - Wav:采用wav音频解码器
 
   ![](/assets/屏幕快照 2016-09-12 下午3.10.42.png)
+
+- 语法结构
+
+      <audio src="mp3/Yellow.mp3 controls"></audio>
+
+     或
+
+       <audio controls> 
+
+          <source src="mp3/Yellow.mp3"/>
+
+       </audio>
+
+
+# audio属性
+
+- audio元素
