--- a/851-在h5中播放音频.md
+++ b/851-在h5中播放音频.md
@@ -31,6 +31,16 @@
 
 # audio属性
 
-- audio元素
+- audio元素支持以下属性
+
+ - src:指定播放文件的URL，可通过<source>
+
+ - controls:可激活各李兰器提供的默认页面
+
+ - autoplay:加载音频后自动播放
+
+ - loop:设置该属性后，会反复播放该音频
+
+ - preload:缓存设置
 
   
