--- a/891-svg概述.md
+++ b/891-svg概述.md
@@ -81,3 +81,46 @@
        
 # SVG折线元素
 
+ - SVG使用polyline标签来创建折现，代码如下：
+
+       <svg width="100%" height="100">
+           <polyline points="0,0 0,20 20,20 20,40 40,40 40,60">
+       </svg>
+
+   - points属性用于存储折线中的起点、折点和终点的x和y轴坐标值
+
+    0,0 表示起点
+
+    0,20 20,20 20,40 40,40 表示折点
+
+    40，60 表示终点
+
+# SVG多边形元素
+
+  - SVG使用polygon标签来创建含有不少于三个边的多边形，代码如下
+
+        <svg width="500" height="500">
+
+            <polygon points="220,100 300,210 170,250" style="fill:#cccccc; stroke:#000000; stroke-width:1"/>
+
+        </svg>
+    
+     - points属性定义多边形每个角的x和y坐标
+
+# SVG高斯模糊滤镜元素
+
+  - SVG使用filter标签来创建滤镜
+
+        <svg width="500" height="500">
+
+           <defs>
+
+              <filter id="Gaussian_Blur"> 
+                 <feGaussianBlur in ="SourceGraphic" stdDeviation="3"/>
+
+              </filter>
+
+           </defs>
+
+        </svg>
+
