--- a/891-svg概述.md
+++ b/891-svg概述.md
@@ -124,3 +124,22 @@
 
         </svg>
 
+# SVG高斯模糊滤镜元素
+
+ - SVG使用linearGradient标签来创建线性渐变
+
+   - filter标签的id属性可为滤镜定义一个唯一的名称(同一滤镜可被文档中的多个元素使用)
+
+   - 滤镜效果是通过feGaussianBlur标签定义的
+
+   - fegaussianBlur标签的stdDeviation属性可定义模糊的程度
+
+   - in="sourceGraphic"这个部分定义了由整体图像创建效果
+
+- SVG使用ellipse标签来调用线性渐变
+
+      <ellipse cx="200" cy="150" rx="70" ry="40" styl="fill:#ff0000;stroke:#000000;stroke-width:2;filter:url(#Gaussian_Blur)"/>
+
+# SVG渐变元素
+
+
