--- a/891-svg概述.md
+++ b/891-svg概述.md
@@ -142,4 +142,46 @@
 
 # SVG渐变元素
 
+ - 什么是渐变
 
+   - 渐变是一种从一种颜色到另一种颜色的平滑过渡(可以将多个颜色的过渡应用到同一个元素上)
+
+ - SVG渐变类型
+
+   - SVG线性渐变，使用linearGradient标签定义线性渐变
+
+  - SVG放射性渐变，使用radialGradient标签定义放射性渐变
+
+  - **SVG渐变必须在defs标签中进行定义**
+
+  - SVG使用linearGradient标签来创建线性渐变
+
+         <svg width="500" height="500"> 
+
+            <defs>
+
+              <linearGradient id="orange_red" x1="0%" y1="0%" x2="100%" y2="0%">
+
+                 <stop offset="0%" style="stop-color:rgb(255,255,0); stop-opacity:1"/>
+
+                <stop offset="100%" style="stop-color:rgb(255,0,0); stop-opacity:1"/>
+
+              </linearGradient>
+
+           </defs>
+
+         </svg>
+
+- SVG使用linearGradient标签来创建线性渐变
+
+  - linearGradient的id属性可为渐变定义一个唯一的名称
+ 
+  - linearGradient标签的x1,x2,y1,y2属性可定义渐变的开始和结束位置
+
+  - 渐变的颜色范围可有两种或多种颜色组成，每种颜色通过一个stop标签来规定，offset属性用来定义渐变的开始和结束位置
+
+- SVG使用ellipse标签来调用线性渐变
+
+       <ellipse cx="200" cy="190" rx="85" ry="55" style="fill:url(#orange_red)"/>
+
+     - fill:url(#orange_red)属性把ellipse元素链接到此渐变
