--- a/112-web的工作原理.md
+++ b/112-web的工作原理.md
@@ -9,4 +9,43 @@
   - 通信协议采用的是HTTP协议，超文本传输协议(Hypertext Transfer Protocol)
   ![](/assets/屏幕快照 2016-09-22 上午11.48.40.png)
 
-- 在Web服务器上
+- 在Web服务器上，主要以网页的形式来发布多媒体信息
+
+  - 网页采用超文本标记语言HTML编写
+
+- 浏览器软件连接到Web服务器并获取网页
+
+   - 浏览器解释HTML网页文档，并显示在用户的屏幕上
+
+# Web服务器
+
+ - 主要功能
+
+    - 存储Web上的内容信息(如：Web页文件)，提供管理环境
+
+    - 响应浏览器的请求，执行服务器端程序
+
+    - 安全功能等
+
+ - 主要Web服务器产品
+
+    - TOMCAT
+    - IIS
+    - APACHE
+    - Node.js
+
+# Web浏览器
+
+ - 主要功能
+
+  - 提交请求
+  - 作为HTML解释器和内嵌脚本程序执行器
+  - 用图形化的方式显示HTML文档
+
+- 主要Web浏览器产品
+
+  - IE
+  - Firefox geco
+  - Chrome webkit
+  - Opera webkit
+  - Safari webkit
