--- a/113-web的相关技术.md
+++ b/113-web的相关技术.md
@@ -2,4 +2,16 @@
 
   - 服务器端技术
   - 客户端技术
+![](/assets/屏幕快照 2016-09-22 上午11.59.58.png)
+
+# 服务器端技术
+
+ - 运行于服务器
+ - 大多提供了数据库访问的能力
+   
+   - PHP(Hypertext Preprocessor)
+   - JSP(Java Server Page)
+   - ASP(Action Server Page)
+  <img src="/assets/屏幕快照 2016-09-22 下午1.55.43.png" height="100px" width="100px">
+
 
