--- a/113-web的相关技术.md
+++ b/113-web的相关技术.md
@@ -12,4 +12,4 @@
    - PHP(Hypertext Preprocessor)
    - JSP(Java Server Page)
    - ASP(Action Server Page)
-  
+  ![](/assets/屏幕快照 2016-09-22 下午1.55.43.png)
