--- a/113-web的相关技术.md
+++ b/113-web的相关技术.md
@@ -10,6 +10,17 @@
  - 大多提供了数据库访问的能力
    
    - PHP(Hypertext Preprocessor)
+
    - JSP(Java Server Page)
+
    - ASP(Action Server Page)
-  ![](/assets/屏幕快照 2016-09-22 下午1.55.43.png)
+![](/assets/屏幕快照 2016-09-22 下午2.00.16.png)
+
+# 客户端技术
+
+- 运行于客户端，由浏览器来解释执行
+
+  - HTML
+  - CSS 
+  - JavaScript
+![](/assets/屏幕快照 2016-09-22 下午2.02.14.png)
