--- a/141-url.md
+++ b/141-url.md
@@ -1,22 +1,66 @@
 # 目录结构
 
-- 目录就是Web站点中文件夹的名称
+* 目录就是Web站点中文件夹的名称
 
-  - 包含多个目录
-  - 每个目录包含站点的不同部分
+  * 包含多个目录
+  * 每个目录包含站点的不同部分
 
-- Web站点的主目录，称为Web站点的根目录
+* Web站点的主目录，称为Web站点的根目录
 
-  - 位于根目录下的其他文件夹，称为子目录
-  - 每个子目录下都会包含具体功能的下一级子目录
+  * 位于根目录下的其他文件夹，称为子目录
+  * 每个子目录下都会包含具体功能的下一级子目录
+
 
 # URL
 
- - URL(Uniform Resource Locator)：统一资源定位器，用来标示网络中的任何资源
+* URL\(Uniform Resource Locator\)：统一资源定位器，用来标示网络中的任何资源
 
-   - 文本、图片、音视频文件、段落或其他超文本
+  * 文本、图片、音视频文件、段落或其他超文本
 
- - URL即路径，指从当前位置到目标位置所经过的路线
+* URL即路径，指从当前位置到目标位置所经过的路线
 
- - 路径在Web页面主要有是三种形式
+* 路径在Web页面主要有是三种形式
 
+  * 绝对路径
+
+    ```
+      <img src="file:/F:/test.png">
+    ```
+
+  * 相对路径
+
+    ```
+      <img src=".../../test.png">
+    ```
+
+  * 根相对路径
+
+
+
+# 绝对路径
+
+ - 值得是文件从最高级目录下开始的完整的路径，无论当前路径是什么，使用绝对路径总是能找到要链接的文件
+
+ - 即完整的URL组成
+
+   - 协议、主机名、目录路径、文件名
+
+         http://www.w3.org/TR/CSS2/syndata.html 
+
+         - http：协议名（用://分隔）
+
+         - www.w3.org：主机名
+
+         - /TR/CSS2/：目录路径
+
+         - syndata.html：要链接的文件名
+
+
+# 相对路径
+
+ - 相对路径
+
+  - 指文件的位置是相对于当前文件的位置，它包括目录名，或指向一个可以从当前目录出发找到该文件的路径
+  ![](/assets/屏幕快照 2016-09-23 下午3.54.01.png)
+  ![](/assets/屏幕快照 2016-09-23 下午3.54.41.png)
+  ![](/assets/屏幕快照 2016-09-23 下午3.55.03.png)
