--- a/183-其他控件.md
+++ b/183-其他控件.md
@@ -24,3 +24,35 @@
 
     - name:选项框命名
     - size:大于1，则为滚动列表
+
+    - multipe:设置多选
+
+ - option选项
+
+    - value:选项的值
+    - selected:预选中
+
+ ![](/assets/屏幕快照 2016-09-24 下午4.42.01.png)
+
+# textarea元素
+
+ - 多行文本输入框
+
+       <textarea>文本</textarea>
+
+ - 主要属性
+  
+    - name:名称
+    - cols:指定文本区域的列数
+    - rows:指定文本区域的行数
+    - readonly:只读
+
+    ![](/assets/屏幕快照 2016-09-24 下午4.45.15.png)
+
+# 为控件分组
+
+ - fieldset元素：为控件分组
+
+ - legend元素：为分组指定一个标题
+
+ ![](/assets/屏幕快照 2016-09-24 下午4.46.56.png)
