--- a/211-css概述.md
+++ b/211-css概述.md
@@ -54,7 +54,7 @@
   - 各元素使用统一的样式声明
   - 且提高了样式的可重用性和可维护性
 
-- 什么是CSS
+# 什么是CSS
 
  - CSS(Cascading Style Sheets)：层叠样式表，又叫级联样式表，简称样式表
 
@@ -63,7 +63,7 @@
   - 实现了将内容与表现分离
   - 提高代码的可重用性和可维护性
 
-- CSS与HTML之间的关系
+# CSS与HTML之间的关系
 
  - HTML用于构建网页的结构
  - CSS用于构建HTML元素的样式
