--- a/212-使用css样式表.md
+++ b/212-使用css样式表.md
@@ -28,15 +28,54 @@
 
          <h1 style =“background-color : silver ; color : blue ;”>文本</h1>
 
-- 内部样式表
+# 内部样式表
 
-  - 样式表规则位于文档头元素中的 <style> 元素内
+  - 样式表规则位于文档头元素中的style元素内
+    
+    - 在文档的head元素内添加style元素
+    - 在style元素中添加样式规则
 
-    - 在文档的 <head> 元素内添加 <style> 元素
+          <html>
 
-    – 在 <style> 元素中添加样式规则
+             <head>
 
+               <style type="text/css">
 
+                  h1 { color : blue ; }
 
+               </style>
 
+            </head>
 
+            <body>
+
+               <h1>文本1</h1>
+
+               <h1>文本2</h1>
+
+            </body>
+
+          </html>
+
+- 在style元素中添加样式规则
+
+    - 可以定义多个样式规则
+
+    - 每个样式规则有两个部分：选择器和样式声明
+
+- 选择器：决定哪些元素使用这些规则
+
+- 样式声明：一对大括号，包含一个或者多个属性/值对
+
+# 外部样式表
+
+ - 第一步：创建一个单独的样式表文件用来保存样式规则
+
+   - 一个纯文本文件，后缀为.CSS
+   - 样式规则由选择器和样式声明组成
+ ![](/assets/屏幕快照 2016-10-04 下午6.52.11.png)
+    
+
+ - 第二步：在需要使用该样式表文件的页面上，使用link元素链接需要的外部样式表文件
+
+    - 在文档的 <head> 元素内添加 <link> 元素
