--- a/242-外边距.md
+++ b/242-外边距.md
@@ -20,3 +20,45 @@
  - 外边距的属性值可能为px(像素)，百分比(%)或自动(auto)，也可以为负值
 
  ![](/assets/屏幕快照 2016-10-04 下午10.28.34.png)
+
+ - 默认情况下，以下HTML块级元素都存在外边距
+
+  - body
+  - h1~h6
+  - p...
+
+ - 声明margin属性，可以覆盖默认样式
+
+       body,p,div,h1,h2,h3,h4,h5,h6,pre {
+
+        margin:0;
+
+       }
+
+ - margin可取值为auto，由浏览器计算外边距
+
+   - 实现水平方向居中显示的效果
+
+    ![](/assets/屏幕快照 2016-10-04 下午10.32.48.png)
+
+# 外边距的简洁写法
+
+ - 外边距的简捷写法有以下几种：
+
+   - margin : value(四个方向相同) ;
+
+   - margin : value(上下) value(左右) ;
+
+   - margin : value(上) value(左右) value(下) ;
+
+   - margin: value(上) value(右) value(下) value(左) ;
+
+ ![](/assets/屏幕快照 2016-10-04 下午10.35.38.png)
+
+# 外边距合并
+
+ - 当两个垂直外边距相遇时，他们将形成一个外边距，称为外边距的合并
+
+ - 合并后的外边距的高度等于两个发生合并的外边距的高度中的较大者
+
+ ![](/assets/屏幕快照 2016-10-04 下午10.37.19.png)
