--- a/242-背景属性.md
+++ b/242-背景属性.md
@@ -59,3 +59,69 @@
 ![](/assets/屏幕快照 2016-10-04 下午11.12.48.png)
 
 ![](/assets/屏幕快照 2016-10-04 下午11.13.07.png)
+
+# 背景图片的固定
+
+  - background-attachment,默认清苦下，背景图像会随着页面的滚动而移动
+
+  - 可以通过background-attachment属性来设置
+
+    - 默认值是scroll：默认情况下，背景会随着文档滚动
+
+    - 可取值为fixed：背景图像固定，并不会随着页面的其余部分滚动，常用于实现成为水印的图像
+
+  ![](/assets/屏幕快照 2016-10-04 下午11.15.49.png)
+  
+# 背景定位
+
+  - background-position属性改变图像在背景中的位置
+
+  - 该属性的取值为
+
+ ![](/assets/屏幕快照 2016-10-04 下午11.17.09.png)
+![](/assets/屏幕快照 2016-10-04 下午11.17.36.png)
+ 
+# 背景绘制区域
+
+  - background-clip属性规定背景的绘制区域
+
+  - 可取值为
+
+    - border-box:背景被裁剪到边框盒，为默认值
+
+    - padding-box:背景被裁剪到内边距框
+
+    - content-box:背景被裁剪到内容框
+
+ ![](/assets/屏幕快照 2016-10-04 下午11.19.48.png)![](/assets/屏幕快照 2016-10-04 下午11.19.30.png)
+
+# 背景的定位区域
+
+  - background-origin属性规定背景图片的定位区域
+
+  - 可取值为
+
+     - border-box：背景图像相对于边框来定位
+
+     - padding-box：背景图像相对于内边距框来定位
+
+     - content-box：背景图像相对于内容框来定位
+
+  ![](/assets/屏幕快照 2016-10-04 下午11.21.58.png)![](/assets/屏幕快照 2016-10-04 下午11.21.18.png)
+
+# 背景属性
+
+ - background 属性在一个声明中设置所有的背景属性
+
+ - 语法结构是：
+
+  - background : color url(图像URL) repeat attachment position ;
+
+ - 如果不设置其中的某个值，将使用默认值
+
+       body {
+
+          background:#9dcdfe url("image/Tulips.jpg") no-repeat fixed left top;
+
+        }
+
