--- a/31-图层的基本操作.md
+++ b/31-图层的基本操作.md
@@ -6,3 +6,13 @@
 
  - 设置图层的缩略图的大小
  - 图层面板上，右上角小三角右键>面板选项
+
+  ![](/assets/屏幕快照 2016-10-18 下午1.51.06.png)
+
+# 调整图层顺序
+
+ - 选择图层
+ - 顶层：shift+ctrl+]
+ - 底层：shift+ctrl+[
+ - 前移：ctrl+]
+ - 后移：ctrl+[
