--- a/34-图像变换.md
+++ b/34-图像变换.md
@@ -7,3 +7,26 @@
    - shift+alt中心等比缩放
 
    - shift以15度为增量进行旋转
+
+  ![](/assets/屏幕快照 2016-10-18 下午2.29.34.png)
+
+# 自由变换
+
+  - Ctrl+T
+
+    - 按住Alt键拖拽图像，可对图像进行任意变形
+
+    - 右键单击，选择斜切/扭曲/透视
+
+    ![](/assets/屏幕快照 2016-10-18 下午2.31.33.png)
+
+# 变形模式
+
+  - Cltr+T
+   
+    - 点击选项栏的变形按钮
+    - 右键单击，选择变形
+
+
+   ![](/assets/屏幕快照 2016-10-18 下午2.32.54.png)
+  
