Creates assets/屏幕快照 2016-10-18 下午3.12.05.png
Auto commit by GitBook Editor

--- a/36-切图及实现.md
+++ b/36-切图及实现.md
@@ -11,3 +11,14 @@
    1. 保证功能的实现
    2. 将文字转换成文本(SEO)
    3. 方便后期实现
+
+
+# 切图工具使用
+
+ - 切图的工具：切片工具
+
+  ![](/assets/屏幕快照 2016-10-18 下午3.01.56.png)
+
+ - 调整切片：切片选择工具
+
+   ![](/assets/屏幕快照 2016-10-18 下午3.03.25.png)
