--- a/441-转换简介.md
+++ b/441-转换简介.md
@@ -25,4 +25,22 @@
  - transform-function
 
     表示一个或者多个转换函数，中间以空格分开
+ 
+    ![](/assets/屏幕快照 2016-10-18 下午6.02.11.png)
 
+# 转换的原点
+
+ - transform-origin属性用来指定元素的转换原点位置
+
+ - 默认情况下，转换的原点元素在元素的中心点
+
+   - 或者是X轴和Y轴的50%处
+
+ - transform-origin:数值/百分比/关键字
+
+   - 一个值：表示所有轴的位置
+   - 两个值：表示X轴和Y轴
+  
+   - 三个值：表示X轴、Y轴、Z轴
+
+    ![](/assets/屏幕快照 2016-10-18 下午6.05.25.png)
