--- a/443-3d转换.md
+++ b/443-3d转换.md
@@ -9,3 +9,33 @@
  - 浏览器兼容性
 
   - Chrome和Safari支持替代的-webkit-perspective 
+
+# 3D位移
+
+ - 3D位移可以改变元素在Z轴位置
+
+ - 3D位移主要包含
+
+   - translateZ(z)
+   - translate3d(x,y,z)
+
+# 3D旋转
+
+ - 3D旋转主要包含
+
+   - rotateX(deg)
+   - rotateY(deg)
+   - rotateZ(deg)
+   - rotate3d(x,y,z,deg)
+
+   ![](/assets/屏幕快照 2016-10-18 下午6.26.36.png)
+
+   ![](/assets/屏幕快照 2016-10-18 下午6.26.54.png)
+
+# 3D缩放
+
+  - 3D缩放主要包含
+
+    - scaleZ(z)
+    - scale3d(x,y,z)
+
