Creates 462-动画示例.md
Auto commit by GitBook Editor

--- a/452-过渡子属性.md
+++ b/452-过渡子属性.md
@@ -53,3 +53,33 @@
 
    - ease-in-out:以慢速开始和结束
 
+# 过渡延迟
+
+  - transition-delay:属性规定过渡效果何时开始
+
+    - 即，当改变元素属性值后多长时间开始执行过渡效果
+
+    - 以秒或毫秒计算
+
+  - 语法
+
+    - transtion-delay:s/ms
+
+
+# 简写属性
+
+ - transition:属性是一个简写属性，用于设置四个过渡属性
+  
+ - 语法
+
+   transition:property duration timing-function delay
+
+# 多个过渡效果
+
+  - 为过渡子属性设置多个值，多个值之间用逗号隔开
+
+  ![](/assets/屏幕快照 2016-10-23 下午1.26.23.png)
+
+  - 为transition属性设置多个值，多个值之间用逗号隔开
+
+  ![](/assets/屏幕快照 2016-10-23 下午1.27.00.png)
