--- a/461-动画概述.md
+++ b/461-动画概述.md
@@ -1,1 +1,31 @@
-# 
+# 什么是动画
+
+ - 过渡属性只能模拟动画效果
+
+ - animation属性可以制作类似flash动画
+
+  - 通过关键帧控制动画的每一步
+
+  - 使元素从一种样式逐渐变化为另一种样式
+
+  - 实现复杂的动画效果
+
+# 浏览器兼容性
+
+  - 最新版本支持良好
+  - Chrome和Safari需要前缀-webkit-
+  - Firefox需要前缀-moz-
+  -Opera需要前缀-o-
+
+# 动画示例
+
+ 1. 声明动画
+
+   - 创建一个已命名的动画
+   - 使用@keyframes声明动画的关键帧
+
+ 2. 为元素调用动画
+
+   - 对元素使用animation属性调用动画
+
+   - 设置动画的播放时间，播放次数
