--- a/463-动画属性.md
+++ b/463-动画属性.md
@@ -47,4 +47,16 @@
   ![](/assets/屏幕快照 2016-10-23 下午1.44.48.png)
   ![](/assets/屏幕快照 2016-10-23 下午1.44.28.png)
 
-# 
+# animation-fill-mode属性
+
+  - 规定动画在播放之前或之后，其动画效果是否可见
+
+  - 可取值：
+
+    - none:不改变默认行为
+
+    - forwords:当动画完成后，保持最后一个属性值(在最后一个关键帧中定义)
+
+    - backwords:在动画显示之前，应用开始属性值(在第一个关键帧中定义)
+
+    - both:向前和向后填充模式都被应用
