--- a/463-动画属性.md
+++ b/463-动画属性.md
@@ -60,3 +60,15 @@
     - backwords:在动画显示之前，应用开始属性值(在第一个关键帧中定义)
 
     - both:向前和向后填充模式都被应用
+
+# animation-play-state属性
+
+  - 规定动画正在运行还是暂停
+
+   - 常用语结合js代码使用，实现在播放过程中暂停动画
+
+  - 可取值
+
+     - paused：动画暂停
+
+     - runing:动画播放
