Creates assets/屏幕快照 2016-10-25 下午4.10.17.png
Auto commit by GitBook Editor

--- a/563-关系运算.md
+++ b/563-关系运算.md
@@ -1,1 +1,48 @@
 # 使用关系运算符
+
+  - 关系运算用于判断数据之间的大小关系
+
+        “>”（大于）,“<”（小于）,“>=”（大于等于）,“<=”（小于等于）,“==”（等于）,“!=”（不等于）
+
+- 关系表达式的值为boolean类型(true或false)
+
+      console.log( 3 > 10 ); //false
+
+      console.log( '3' > '10' ); //true
+
+      console.log( '3' > 10 ); //false
+
+      console.log( '3a' > 10); //false
+
+- 全等：===
+
+    - 类型相同，数值相同
+
+- 不全等：!==
+
+      var a1 = "10";
+
+      var a2 = 10;
+
+      console.log( a1 == a2 ); //true
+
+      console.log( a1 === a2 ); //false
+
+      console.log( a1 != a2 ); //false
+
+      console.log( a1 !== a2 ); //true
+
+# isNav函数
+
+ - isNaN()
+
+  - 用于判断其参数是否为一个“非数字(NaN)”值
+
+  - 如果把NaN与任何值(包括其自身)相比得到的结果均是false，所以要判断某个值是否是NaN，不能使用==或===运算符，这种情况下用isNaN()函数
+
+  - 通常用于检测类型转换函数的运算结果，以判断他们表示的是否是合法的数字
+
+         console.log( isNaN( '123.4a' ));
+         console.log( isNaN( parseInt('123.4a' ) );
+         console.log( isNaN( parseFloat('123.4a') );
+         console.log( isNaN( Number('123.4a') );
