--- a/572-函数的调用.md
+++ b/572-函数的调用.md
@@ -35,3 +35,56 @@
        var result = add( 10, 20 );
 
        console.log( result ); //输出30
+
+
+# 函数内调用
+
+   - 可以在一个函数体内调用其他函数
+
+         function getData( ){ } 
+
+         function processData( ) { }
+
+         function printData( ){ }
+
+         function run( ){
+
+            getData( );
+
+            processData( );
+
+            printData( );
+         }
+
+
+
+   - 函数体内调用其他函数单的复杂例子
+
+         function f3( ){ 
+
+            console.log( 'f3 begin...' );
+
+            console.log( 'f3 end...' );
+
+         }
+
+         function f2( ){
+
+            console.log( 'f2 begin...' );
+
+            f3( );
+
+            console.log( 'f2 end...' );
+
+         }
+
+         function f1( ){
+
+           console.log( 'f1 begin...' );
+
+           f2( );
+
+           console.log( 'f1 end...' );
+
+         }
+
