Creates assets/屏幕快照 2016-10-27 下午12.11.18.png
Auto commit by GitBook Editor

--- a/573-函数的作用域.md
+++ b/573-函数的作用域.md
@@ -52,3 +52,130 @@
          add(); //必须调用一次
 
          console.log( sum ) ; //正确
+
+# 声明提前
+
+  - JavaScript程序在正式执行前，会将所有var声明的变量和funciton声明的函数，预读到所在作用域的顶部。但是对变量的赋值让保留在原位置，随脚本解释执行
+
+  - 比如：
+
+        console.log(a); //不会出错，输出undefined 
+
+        var a=100;
+
+        console.log(a); //100；
+
+- 其实等效于
+
+      var a; //仅声明提前
+
+      console.log(a); //undefined
+
+      a=100; //赋值仍保留在原位置
+
+      console.log(a); //100
+
+
+ - 声明提前仅能将声明提前到所在作用域的顶部
+
+        function fun(){ 
+
+          console.log(a);//undefined
+
+          var a=100;
+
+          console.log(a); //100
+
+       }
+
+       console.log(a); //报引用错误！
+
+- 等效于
+
+      function fun(){
+
+        var a; //仅提前到函数顶部
+
+        console.log(a); //undefined
+
+        a=100;
+
+        console.log(a); //100
+
+      }
+
+      console.log(a); //报引用错误！
+
+- 声明提前不但能将变量声明提前，而且还会将函数声明提前。
+
+      console.log(fun()); //2
+
+      function fun(){
+
+        return 2;
+
+      }
+
+- 其实等效于：
+
+      function fun(){
+
+        return 2;
+
+      }
+
+      console.log(fun()); //2
+
+- **今后尽量将变量的声明和函数的声明集中在当前作用域的顶部**
+
+# 按值传递
+
+  - 按值传递指将实参变量的值复制一份副本给方法的形参变量。
+
+  - JavaScript中为方法传递参数时，都是按值传递的。
+
+  - 如果传递的是原始类型数据，则在方法内修改参数变量的值，不会影响外部的实参变量。
+
+  - 比如：
+
+        var n=100; //全局变量n
+
+        function fun(n){ //参数变量也是局部变量
+
+           n-=3; //修改的是局部变量n
+
+           console.log(n); //输出的是局部变量n
+
+         }
+
+         fun(n); //按值传递，方法内输出97;
+
+         console.log(n); //输出全局变量的值：100
+
+# 函数的作用域
+
+ - 与变量类似，函数的作用域也分为“全局作用域(全局函数)”和"函数作用域(局部函数)"
+
+   - 在最外层定义的函数全是全局函数
+
+         function add(num1, num2){ //全局函数 
+
+            console.log( num1+num2 );
+
+         }
+
+         add( 1, 2 ); //正确
+
+  - 在一个函数内部定义的函数是局部函数
+
+         function outer( ){ //全局函数 
+
+            function inner(){ //局部函数
+
+              console.log("inner");
+
+            }
+
+         }
+
+         inner( ); //脚本错误
